# open-spectrograph

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  bootstrap.sh  build_paper.sh  export.py  fetch_vendor_steps.sh  open-spectrograph.tex  pyproject.toml  requirements.txt  run_optimizer.py
LICENSES/: CERN-OHL-P-2.0.txt  MIT.txt
controller/: __init__.py  calibrate.py  capture.py  cli.py  device.py  protocol.py
data/: cfl_lines.toml  czerny_baseline_v0_design.toml  czerny_baseline_xia2017.toml  czerny_baseline_xia2017_evolved.toml  czerny_bom_tl_corrected.toml  czerny_bom_tl_oap.toml  czerny_bom_tl_standard.toml  czerny_bom_v0_asbuilt.toml  czerny_bom_v0_design.toml  czerny_bom_xia2017_corrected.toml  czerny_bom_xia2017_standard.toml  czerny_targets.toml  defaults.toml  thorlabs_catalog.toml
designs/: __init__.py  czerny.py  czerny_assembly.py  czerny_base.py  czerny_bom.py  czerny_problem.py
docs/: 01-introduction.md  02-design-principles.md  03-simulation.md  04-design-v0.md  04-software.md  05-design-v0.md
optics/: _config.py  _raysect_wrapper.py  assembly.py  collision.py  diagnostics.py  fitness.py  forward_trace.py  grating_math.py  housing.py  housing_cad.py  metrics.py  mounts.py  mounts_cad.py  problem.py  render.py  scene.py  world_builder.py
scripts/: beam_profile.py  cfl_calibrate.py  cfl_figure.py  layout_schematic.py  refine_candidate.py  sensitivity.py  spot_panel.py  stray.py  tolerance.py  validate_xia2017.py
tests/: test_collision.py  test_controller_calibrate.py  test_controller_device.py  test_gui_fwhm.py  test_hit_recorder.py  (+7 more)
(+25 files in other folders)
