[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-spectrograph"
version = "0.2.0"
description = "Non-sequential ray-traced fiber spectrograph simulation and evolutionary optimization"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dookaloosy" }]
keywords = ["optics", "spectrograph", "spectrometer", "ray-tracing", "raysect", "czerny-turner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "raysect~=0.9.1",
    "evolutionary-solver>=0.3.0,<0.4.0",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
cad = ["build123d~=0.10.0"]

[tool.setuptools.packages.find]
include = ["optics*"]
